@@ -1,5 +1,9 @@
 2009-10-14  Dan Nicolaescu  <dann@ics.uci.edu>
 
+	* vc-git.el (vc-git-dir-extra-headers): Set the branch name
+	correctly in the detached head case.
+	(vc-git-print-log): Remove unused binding.
+
 	* vc.el (vc-responsible-backend): When a directory is passed for
 	for registration create a VC repository if no backend is
 	responsible for the directory argument.
